--- a/SCPersonalProject/appsettings.json
+++ b/SCPersonalProject/appsettings.json
@@ -1,9 +1,14 @@
 {
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=SCPersonDB;Integrated Security=True;TrustServerCertificate=True"
+  }
+  
 }
