--- a/SCPersonalProject/SCPersonalProject.csproj
+++ b/SCPersonalProject/SCPersonalProject.csproj
@@ -82,6 +82,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
+    <PackageReference Include="NewsAPI" Version="0.7.0" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
   </ItemGroup>
 
   <ItemGroup>
